Added border netweem header and content

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <h2>Software developer with a focus on front-end development.</h2>
         </div>
     </header>
+    <img id="top-border" src="images/web-border.png" />
 
     <section id="about" class="valign">
         <div class="section-content">
@@ -28,7 +29,17 @@
             </p>
             <p>
                 Prior to working in software, I worked as an
-                environmental engineer specializing in watershed protection and data science.
+                environmental engineer doing watershed protection and data science.
+            </p>
+            <p>
+                I'm continually learning new tools, however some of the things I've used in the past include:
+                <uL>
+                    <li>Languages: JavaScript, HTML, CSS, SASS, SQL, Python, PHP, MATLAB, R</li>
+                    <li>Packages/Frameworks: React, Next, Vue, Shiny</li>
+                    <li>Databases: MySQL, Postgres, MongoDB</li>
+                    <li>Other: Git, AWS, Firebase</li>
+                    <li>Software: Illustrator, ArcGIS</li>
+                </uL>
             </p>
         </div>
     </section>
@@ -41,7 +52,7 @@
             <div class="project-container">
                 <img src="images/rubiks_slide.gif" />
                 <div class="project-description">
-                    <a href="">Rubik's Slide</a>: Kinda like a 2D Rubik's Cube, but not exactly.
+                    <a href="https://chrislopez28.github.io/rubiks-slide">Rubik's Slide</a>: Kinda like a 2D Rubik's Cube, but not exactly.
                 </div>
             </div>
 
@@ -69,7 +80,6 @@
                 <div class="project-description">
                     <a href="https://chrislopez28.github.io/literary-openings" target="_blank">Conway's Game of
                         Life</a>: Vanilla JS implementation of the classic simulation.
-                    Can you identify where it's from?
                 </div>
             </div>
 
