--- a/index.html
+++ b/index.html
@@ -8,17 +8,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
 </head>
 
 <body>
-    <div id="stars"></div>
-    <header id="header" class="header valign">
-        <div class="section-content">
-            <h1 class="text-white">Chris Lopez</h1>
-            <h2>Software developer with a focus on front-end development.</h2>
-        </div>
-    </header>
-    <img id="top-border" src="images/web-border.png" />
+
+    <script src="app.js"></script>
+
+    <div id="top-container">
+        <div id="particles-js"></div>
+        <header id="header" class="header valign">
+            <div class="section-content">
+                <h1 class="text-white">Chris Lopez</h1>
+                <h2>Software developer with a focus on front-end development.</h2>
+            </div>
+        </header>
+        <img id="top-border" src="images/web-border.png" />
+    </div>
+
+
+
+
 
     <section id="about" class="valign">
         <div class="section-content">
@@ -32,7 +43,7 @@
                 environmental engineer doing watershed protection and data science.
             </p>
             <p>
-                I'm continually learning new tools, however some of the things I've used in the past include:
+                I'm continually learning new tools. Some of the tools I've used in the past include:
                 <uL>
                     <li>Languages: JavaScript, HTML, CSS, SASS, SQL, Python, PHP, MATLAB, R</li>
                     <li>Packages/Frameworks: React, Next, Vue, Shiny</li>
