--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>About</h1>
             <p><strong>I'm an engineer and software developer located in Los Angeles, USA.</strong></p>
             <p>
-                I specialize in front-end development.
+                I specialize in front-end development and data.
             </p>
             <p>
                 Prior to working in software, I worked as an
