--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Chris Lopez">
+    <meta name="description" content="Software Engineer with a focus of front-end development.">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <title>Chris Lopez</title>
 </head>
 
 <body>
@@ -24,7 +31,7 @@
                 <h2>Software developer with a focus on front-end development.</h2>
             </div>
         </header>
-        <img id="top-border" src="images/web-border.png" />
+        <img id="top-border" src="images/web-border.png" alt="" />
     </div>
 
 
@@ -36,7 +43,7 @@
             <h1>About</h1>
             <p><strong>I'm an engineer and software developer located in Los Angeles, USA.</strong></p>
             <p>
-                I specialize in front-end development and data.
+                I specialize in front-end development and data analysis.
             </p>
             <p>
                 Prior to working in software, I worked as an
@@ -61,35 +68,41 @@
             <h1>Projects</h1>
 
             <div class="project-container">
-                <img src="images/rubiks_slide.gif" />
+                <img width="60" height="60"src="images/rubiks_slide.gif" alt="Icon image for Rubik's Slide project." width="60" height="60" />
                 <div class="project-description">
-                    <a href="https://chrislopez28.github.io/rubiks-slide">Rubik's Slide</a>: Kinda like a 2D Rubik's Cube, but not exactly.
+                    <a href="https://chrislopez28.github.io/rubiks-slide" target="_blank" rel="noopener noreferrer" >Rubik's Slide</a>: Kinda like a 2D Rubik's Cube, but not exactly.
                 </div>
             </div>
 
 
             <div class="project-container">
-                <img src="images/lit.png" />
+                <img src="images/lit.png" alt="Icon image for Literary Openings project." width="60" height="60" />
                 <div class="project-description">
-                    <a href="https://chrislopez28.github.io/literary-openings" target="_blank">Literary Openings</a>: I
-                    love reading books, especially 'classics'. This site displays the opening line(s) of a classic work.
-                    Can you identify where it's from?
+                    <a href="https://chrislopez28.github.io/literary-openings" target="_blank" rel="noopener noreferrer">Literary Openings</a>: I
+                    love reading. This site displays the opening line(s) of some famous books, plays, and poems.
+                    Can you identify the literary work?
                 </div>
             </div>
 
             <div class="project-container">
-                <img src="images/vset.png" />
+                <img src="images/vset.png" alt="Icon image for VSet project." width="60" height="60" />
                 <div class="project-description">
-                    <a href="https://chrislopez28.github.io/vset" target="_blank">VSet</a>: A pattern matching game with
-                    some
-                    interesting maths behind it.
+                    <a href="https://chrislopez28.github.io/vset" target="_blank" rel="noopener noreferrer">VSet</a>: A pattern matching game with
+                    some interesting maths behind it.
                 </div>
             </div>
 
             <div class="project-container">
-                <img src="images/conways.gif" />
+                <img src="images/keno.png" alt="Icon image for Keno project." width="60" height="60" />
                 <div class="project-description">
-                    <a href="https://chrislopez28.github.io/literary-openings" target="_blank">Conway's Game of
+                    <a href="https://chrislopez28.github.io/keno" target="_blank" rel="noopener noreferrer">Keno</a>: A Keno game.
+                </div>
+            </div>
+
+            <div class="project-container">
+                <img src="images/conways.gif" alt="Icon image for Conway's Game of Life project." width="60" height="60" />
+                <div class="project-description">
+                    <a href="https://chrislopez28.github.io/literary-openings" target="_blank" rel="noopener noreferrer">Conway's Game of
                         Life</a>: Vanilla JS implementation of the classic simulation.
                 </div>
             </div>
