--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Chris Lopez">
     <meta name="description" content="Software Engineer with a focus of front-end development.">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -50,7 +47,7 @@
                 environmental engineer doing watershed protection and data science.
             </p>
             <p>
-                I'm continually learning new tools. Some of the tools I've used in the past include:
+                Some of the tools I've used in the past include:
                 <uL>
                     <li>Languages: JavaScript, HTML, CSS, SASS, SQL, Python, PHP, MATLAB, R</li>
                     <li>Packages/Frameworks: React, Next, Vue, Shiny</li>
@@ -116,6 +113,12 @@
     <section id="experience" class="valign">
         <div class="section-content">
             <h1>Experience</h1>
+            <div class="experience-container">
+                <strong>Software Developer</strong> from March 2020 - present
+                <ul>
+                    <li>Developing several web applications with high Google Lighthouse scores for performance, accessibility, best practices, and SEO.</li>
+                </ul>
+            </div>
             <div class="experience-container">
                 <strong>Water Resource Control Engineer</strong> at California Environmental Protection Agency from
                 April 2016 - March 2020
