Made particles fixed. Updated about text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Chris Lopez">
-    <meta name="description" content="Software Engineer with a focus of front-end development.">
+    <meta name="description" content="Software Engineer">
     <link rel="stylesheet" href="portfolio.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -23,38 +23,22 @@
     <div id="top-container">
         <div id="particles-js"></div>
         <header id="header" class="header valign">
-            <div class="section-content">
+            <div class="section-content" >
                 <h1 class="text-white">Chris Lopez</h1>
-                <h2>Software developer with a focus on front-end development.</h2>
+                <h2>Software developer with a focus on web development</h2>
             </div>
         </header>
         <img id="top-border" src="images/web-border.png" alt="" />
     </div>
 
-
-
-
-
     <section id="about" class="valign">
         <div class="section-content">
             <h1>About</h1>
-            <p><strong>I'm an engineer and software developer located in Los Angeles, USA.</strong></p>
-            <p>
-                I specialize in front-end development and data analysis.
-            </p>
-            <p>
-                Prior to working in software, I worked as an
-                environmental engineer doing watershed protection and data science.
-            </p>
-            <p>
-                Some of the tools I've used in the past include:
-                <uL>
-                    <li>Languages: JavaScript, HTML, CSS, SASS, SQL, Python, PHP, MATLAB, R</li>
-                    <li>Packages/Frameworks: React, Next, Vue, Shiny</li>
-                    <li>Databases: MySQL, Postgres, MongoDB</li>
-                    <li>Other: Git, AWS, Firebase</li>
-                    <li>Software: Illustrator, ArcGIS</li>
-                </uL>
+            <p style="text-align: center;"><strong>I'm an engineer and software developer located in Los Angeles, USA.</strong></p>
+            <p style="text-align: center;">
+                I specialize in front-end development. Previously, I worked as an
+                environmental engineer doing watershed protection and data science. I love 
+                browsing used book stores and chasing my two year old.
             </p>
         </div>
     </section>
@@ -67,7 +51,8 @@
             <div class="project-container">
                 <img width="60" height="60"src="images/rubiks_slide.gif" alt="Icon image for Rubik's Slide project." width="60" height="60" />
                 <div class="project-description">
-                    <a href="https://chrislopez28.github.io/rubiks-slide" target="_blank" rel="noopener noreferrer" >Rubik's Slide</a>: Kinda like a 2D Rubik's Cube, but not exactly.
+                    <a href="https://chrislopez28.github.io/rubiks-slide" target="_blank" rel="noopener noreferrer" >Rubik's Slide</a>: 
+                    Kinda like a 2D Rubik's Cube, but not exactly. 
                 </div>
             </div>
 
@@ -77,7 +62,7 @@
                 <div class="project-description">
                     <a href="https://chrislopez28.github.io/literary-openings" target="_blank" rel="noopener noreferrer">Literary Openings</a>: I
                     love reading. This site displays the opening line(s) of some famous books, plays, and poems.
-                    Can you identify the literary work?
+                    Can you identify the literary work? 
                 </div>
             </div>
 
@@ -103,8 +88,6 @@
                         Life</a>: Vanilla JS implementation of the classic simulation.
                 </div>
             </div>
-
-
         </div>
     </section>
     <hr class="divider" />
@@ -116,7 +99,7 @@
             <div class="experience-container">
                 <strong>Software Developer</strong> from March 2020 - present
                 <ul>
-                    <li>Developing several web applications with high Google Lighthouse scores for performance, accessibility, best practices, and SEO.</li>
+                    <li>Developing web applications with a focus on performance, accessibility, best practices, and SEO.</li>
                 </ul>
             </div>
             <div class="experience-container">
@@ -168,8 +151,14 @@
     </section>
 
     <footer id="footer">
-        <div class="section-content">
-
+        <div class="footer-content">
+            <div>
+                <a href="https://github.com/chrislopez28" target="_blank" rel="noopener noreferrer">Github</a>
+                | <a href="https://www.linkedin.com/in/chrislopez28/" target="_blank" rel="noopener noreferrer">Linkedin</a>
+            </div>
+               <div>
+                <p>2021 Chris Lopez</p>
+               </div>
         </div>
     </footer>
 </body>
