--- a/index.html
+++ b/index.html
@@ -42,56 +42,102 @@
             </p>
         </div>
     </section>
-    <hr class="divider" />
-
+    <div class="divider">
+        <hr>
+    </div>
     <section id="projects" class="valign">
         <div class="section-content">
             <h1>Projects</h1>
 
             <div class="project-container">
-                <img width="60" height="60"src="images/rubiks_slide.gif" alt="Icon image for Rubik's Slide project." width="60" height="60" />
-                <div class="project-description">
-                    <a href="https://chrislopez28.github.io/rubiks-slide" target="_blank" rel="noopener noreferrer" >Rubik's Slide</a>: 
-                    Kinda like a 2D Rubik's Cube, but not exactly. 
+                <div class="image-container">
+                    <img width="60" height="60"src="images/rubiks_slide.gif" alt="Icon image for Rubik's Slide project." width="60" height="60" />
+                </div>
+                <div class="project-description">                        
+                    <h2>Rubik's Slide</h2>
+                    <p>
+                        Kind of like a 2D Rubik's Cube, but not exactly. You have to "slide" the colors on the 3x3 grid so that it
+                        matches the target. Built using React, Redux, and Sass.
+                    </p>
+                    <div>
+                        <a class="link-button" href="https://chrislopez28.github.io/rubiks-slide" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a class="link-button" href="https://github.com/chrislopez28/rubiks-slide" target="_blank" rel="noopener noreferrer">Github</a>
+                    </div> 
                 </div>
             </div>
 
 
             <div class="project-container">
-                <img src="images/lit.png" alt="Icon image for Literary Openings project." width="60" height="60" />
+                <div class="image-container">
+                    <img src="images/lit.png" alt="Icon image for Literary Openings project." width="60" height="60" />
+                </div>
                 <div class="project-description">
-                    <a href="https://chrislopez28.github.io/literary-openings" target="_blank" rel="noopener noreferrer">Literary Openings</a>: I
-                    love reading. This site displays the opening line(s) of some famous books, plays, and poems.
-                    Can you identify the literary work? 
+                    <h2>Literary Openings</h2>
+                    <p>
+                        I love reading. This site displays the opening line(s) of some famous books, plays, and poems.
+                        Can you identify the literary work? Built with React.
+                    </p>
+                    <div>
+                        <a class="link-button" href="https://chrislopez28.github.io/literary-openings" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a class="link-button" href="https://github.com/chrislopez28/literary-openings" target="_blank" rel="noopener noreferrer">Github</a>
+                    </div> 
                 </div>
             </div>
 
             <div class="project-container">
-                <img src="images/vset.png" alt="Icon image for VSet project." width="60" height="60" />
+                <div class="image-container">
+                    <img src="images/vset.png" alt="Icon image for VSet project." width="60" height="60" />
+                </div>
                 <div class="project-description">
-                    <a href="https://chrislopez28.github.io/vset" target="_blank" rel="noopener noreferrer">VSet</a>: A pattern matching game with
-                    some interesting maths behind it.
+                    <h2>VSet</h2>
+                    <p>
+                        A clone of SET, which is my favorite card game. SET is a pattern matching game with some interesting maths behind it. 
+                        Built with Vue.
+                    </p>
+                    <div>
+                        <a class="link-button" href="https://chrislopez28.github.io/vset" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a class="link-button" href="https://github.com/chrislopez28/vset" target="_blank" rel="noopener noreferrer">Github</a>
+                    </div> 
                 </div>
             </div>
 
             <div class="project-container">
-                <img src="images/keno.png" alt="Icon image for Keno project." width="60" height="60" />
+                <div class="image-container">
+                    <img src="images/keno.png" alt="Icon image for Keno project." width="60" height="60" />
+                </div>
                 <div class="project-description">
-                    <a href="https://chrislopez28.github.io/keno" target="_blank" rel="noopener noreferrer">Keno</a>: A Keno game.
+                    <h2>Keno</h2>
+                    <p>
+                        A basic keno game that I made to practice. Not too much to say about this one, but I did enjoy making it. Built using vanilla JS.
+                    </p>
+                    <div>
+                        <a class="link-button" href="https://chrislopez28.github.io/keno" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a class="link-button" href="https://github.com/chrislopez28/keno" target="_blank" rel="noopener noreferrer">Github</a>
+                    </div> 
                 </div>
             </div>
 
             <div class="project-container">
-                <img src="images/conways.gif" alt="Icon image for Conway's Game of Life project." width="60" height="60" />
+                <div class="image-container">
+                    <img src="images/conways.gif" alt="Icon image for Conway's Game of Life project." width="60" height="60" />
+                </div>
                 <div class="project-description">
-                    <a href="https://chrislopez28.github.io/literary-openings" target="_blank" rel="noopener noreferrer">Conway's Game of
-                        Life</a>: Vanilla JS implementation of the classic simulation.
+                    <h2>Game of Life</h2>
+                    <p>
+                        An implementation of Conway's Game of Life that I made to practice. Built with JS.
+                    </p>
+                    <div>
+                        <a class="link-button" href="https://chrislopez28.github.io/conways-game-of-life" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a class="link-button" href="https://github.com/chrislopez28/conways-game-of-life" target="_blank" rel="noopener noreferrer">Github</a>
+                    </div> 
                 </div>
             </div>
         </div>
     </section>
-    <hr class="divider" />
 
+    <div class="divider">
+        <hr>
+    </div>
 
     <section id="experience" class="valign">
         <div class="section-content">
@@ -99,7 +145,9 @@
             <div class="experience-container">
                 <strong>Software Developer</strong> from March 2020 - present
                 <ul>
-                    <li>Developing web applications with a focus on performance, accessibility, best practices, and SEO.</li>
+                    <li>
+                        Building web applications with a focus on performance, accessibility, and best practices. 
+                    </li>
                 </ul>
             </div>
             <div class="experience-container">
@@ -108,9 +156,9 @@
                 <ul>
                     <li>Worked in a team of scientists, geologists, and engineers that implemented programs to reduce
                         pollution from stormwater and improve water sustainability</li>
-                    <li>Developed scripts to analyze water quality data (R, Shiny, Python, ArcGIS, Git)</li>
+                    <li>Developed scripts to analyze water quality data (Tech used: R, VBA, Shiny, Python, ArcGIS)</li>
                     <li>Built and maintained an officewide database and intranet site to track issuance of permits,
-                        replacing a paper-based system (MySQL)</li>
+                        replacing a paper-based system (Tech used: PHP, JavaScript, MySQL)</li>
                     <li>Led workgroups and gave presentations on coding in R and data analysis</li>
                 </ul>
             </div>
@@ -124,7 +172,9 @@
             </div>
         </div>
     </section>
-    <hr class="divider" />
+    <div class="divider">
+        <hr>
+    </div>
 
     <section id="contact" class="valign">
         <div class="section-content">
@@ -150,6 +200,7 @@
         </div>
     </section>
 
+    <div class="bottom-border"></div>
     <footer id="footer">
         <div class="footer-content">
             <div>
