--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header id="header" class="header valign">
             <div class="section-content" >
                 <h1 class="text-white">Chris Lopez</h1>
-                <h2>Software developer with a focus on web development</h2>
+                <h2 style="color: white;">Software developer with a focus on web development</h2>
             </div>
         </header>
         <img id="top-border" src="images/web-border.png" alt="" />
@@ -37,8 +37,8 @@
             <p style="text-align: center;"><strong>I'm an engineer and software developer located in Los Angeles, USA.</strong></p>
             <p style="text-align: center;">
                 I specialize in front-end development. Previously, I worked as an
-                environmental engineer doing watershed protection and data science. I love 
-                browsing used book stores and chasing my two year old.
+                environmental engineer doing watershed protection and data science. I enjoy 
+                discovering books at used book stores and chasing my two year old son.
             </p>
         </div>
     </section>
@@ -108,7 +108,7 @@
                 <div class="project-description">
                     <h2>Keno</h2>
                     <p>
-                        A basic keno game that I made to practice. Not too much to say about this one, but I did enjoy making it. Built using vanilla JS.
+                        A basic keno game that I made to practice. Not too much to say about this one, but I did enjoy making it. Built with plain ole JavaScript.
                     </p>
                     <div>
                         <a class="link-button" href="https://chrislopez28.github.io/keno" target="_blank" rel="noopener noreferrer">Play</a>
@@ -124,7 +124,7 @@
                 <div class="project-description">
                     <h2>Game of Life</h2>
                     <p>
-                        An implementation of Conway's Game of Life that I made to practice. Built with JS.
+                        An implementation of Conway's Game of Life that I made to practice. Built with JavaScript.
                     </p>
                     <div>
                         <a class="link-button" href="https://chrislopez28.github.io/conways-game-of-life" target="_blank" rel="noopener noreferrer">Play</a>
@@ -155,19 +155,19 @@
                 April 2016 - March 2020
                 <ul>
                     <li>Worked in a team of scientists, geologists, and engineers that implemented programs to reduce
-                        pollution from stormwater and improve water sustainability</li>
-                    <li>Developed scripts to analyze water quality data (Tech used: R, VBA, Shiny, Python, ArcGIS)</li>
+                        pollution from stormwater and improve water sustainability.</li>
+                    <li>Developed several scripts to analyze water quality data [R, Shiny, Python, VBA, ArcGIS]</li>
                     <li>Built and maintained an officewide database and intranet site to track issuance of permits,
-                        replacing a paper-based system (Tech used: PHP, JavaScript, MySQL)</li>
-                    <li>Led workgroups and gave presentations on coding in R and data analysis</li>
+                        replacing a paper-based system [PHP, JavaScript, MySQL].</li>
+                    <li>Founded an office group that focused on data analysis and coding.</li>
                 </ul>
             </div>
             <div class="experience-container">
                 <strong>Environmental Scientist</strong> at California Environmental Protection Agency from June 2010 -
                 April 2016
                 <ul>
-                    <li>Worked in a team of technical and legal staff that developed enforcement cases against
-                        environmental polluters</li>
+                    <li>Worked in a team of technical and legal staff that developed and brought forward enforcement cases against
+                        environmental polluters. Personally worked on over 50 cases.</li>
                 </ul>
             </div>
         </div>
@@ -204,8 +204,8 @@
     <footer id="footer">
         <div class="footer-content">
             <div>
-                <a href="https://github.com/chrislopez28" target="_blank" rel="noopener noreferrer">Github</a>
-                | <a href="https://www.linkedin.com/in/chrislopez28/" target="_blank" rel="noopener noreferrer">Linkedin</a>
+                <a href="https://github.com/chrislopez28" target="_blank" rel="noopener noreferrer">Github</a> | 
+                <a href="https://www.linkedin.com/in/chrislopez28/" target="_blank" rel="noopener noreferrer">Linkedin</a>
             </div>
                <div>
                 <p>2021 Chris Lopez</p>
