--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Chris Lopez" />
     <meta name="description" content="Software Engineer" />
+    <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="portfolio.css" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -19,6 +20,21 @@
     <script src="app.js"></script>
 
     <div id="top-container">
+      <nav class="navigation">
+        <ul class="nav-items">
+          <li class="nav-item"><a href="#">Home</a></li>
+          <li class="nav-item"><a href="#about">About</a></li>
+          <li class="nav-item">
+            <a href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a href="#experience">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
       <div id="particles-js"></div>
       <header id="header" class="header valign">
         <div class="section-content">
